# rpki-analysis

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  alloclist_parquet.py  delegated_extended_parquet.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
rpki_analysis/: cloudfrontlogs.py  delegated_stats.py  riswhois.py  routinator.py  rov.py  rpsoftware.py  rsynclogs.py
src/rpki_analysis/: alloclist.py  cloudfrontlogs.py  datastructures.py  delegated_stats.py  riswhois.py  rov.py  rpki_client.py  rpsoftware.py  rsynclogs.py
tests/: test_alloclist.py  test_delegated_stats.py  test_riswhois.py  test_rov.py  test_rsynclogs.py
tests/data/: alloclist-minimal.txt  delegated-afrinic-20240219.bz2  routinator_csv.csv.xz  rpki_client_csv.csv.xz  rpki_client_dump.json.xz
workbooks/: announcements_by_rir.ipynb  asn_ranges_delegated_extended.ipynb  country_alignment.ipynb  data_by_pseudonym.ipynb  delegated_extended_alignment.ipynb  delegated_extended_parquet.ipynb  delegated_extended_parquet_minmax.ipynb  flutter_add_prefix_min_max.ipynb  flutter_add_prefix_min_max_duck.ipynb  lacnic_migration.ipynb  object_ttl.ipynb  objects_per_ca_analysis.ipynb  riswhois_ip_utilisation.ipynb  rpki_cover_on_date.ipynb  rpki_flutter_duckdb.sql  rpki_riswhois_atlas.ipynb  rrdp_cloudfront_logs.ipynb  rsync_logs.ipynb  vrp_changes.ipynb
