[tool.poetry]
name = "rpki-analysis"
version = "0.1.0"
description = ""
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
readme = "README.md"
packages = [{include = "rpki_analysis"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.0.10"
pandas = "^1.5.3"
netaddr = "^0.8.0"
altair = "^4.2.2"
pytricia = "^1.0.2"
aiohttp = "^3.9.1"
pytest-asyncio = "^0.20.3"
alive-progress = "^3.1.5"
click = "^8.1.7"
xlwt = "^1.3.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^2.21.0"
black = "^22.12.0"
flake8 = "^6.1.0"
pylint = "^2.17.7"
flake8-typing-imports = "^1.15.0"
autoflake = "^2.2.1"
ipdb = "^0.13.13"


[tool.black]
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[settings]
# known_third_party = []
