[project]
name = "rpki-analysis"
version = "0.1.0"
description = ""
authors = [{name = "Ties de Kock", email = "ties@tiesdekock.nl"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "alive-progress>=3.2.0",
    "altair>=5.5.0",
    "click>=8.1.7",
    "duckdb>=1.2.1",
    "jupyterlab>=4.3.4",
    "netaddr>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "pytricia>=1.0.2",
    "xlwt>=1.3.0",
]

[settings]

[dependency-groups]
dev = [
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[tool.black]
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
